# gsr-market-intelligence

./: .dockerignore  .gitignore  README.md  docker-compose.yml  test.json
backend/: Dockerfile  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py  helpers.py
backend/alembic/versions/: 0001_init.py  0002_chainlink_feeds.py  0003_chainlink_prices.py  0004_markets.py  0005_price_history.py  0006_wallet_positions.py  0007_transactions.py  0008_ecosystem_metrics.py  0009_divergences.py  0010_external_signals.py  0011_external_signals_fingerprint.py
backend/app/api/: main.py
backend/app/api/v1/: __init__.py  contracts.py  dashboad.py  ecosystem.py  external_signals.py  health.py  markets.py  resolutions.py  schemas.py  search.py  signals.py
backend/app/config/: log.py  settings.py
backend/app/core/: __init__.py  database.py  request_client.py
backend/app/models/: __init__.py  base.py  chainlink_feed.py  chainlink_price.py  divergence.py  ecosystem_metric.py  external_signal.py  market.py  price_history.py  sync_state.py  transaction.py  wallet_position.py
backend/app/schemas/: contract.py  dashboard.py  divergence.py  ecosystem.py  external_signal.py  health.py  market.py  resolution.py  search.py
backend/app/services/: __init__.py  chainlink_client.py  polygon_client.py  polymarket_client.py
backend/app/services/blockchain/: __init__.py  log_source.py
backend/app/services/divergence/: __init__.py  feed_matcher.py  series_provider.py  (+1 more)
backend/app/utils/: __init__.py  request_client.py
backend/app/workers/: divergence_calculator.py  ecosystem_aggregator.py  external_signals_collector.py  market_price_collector.py  markets_ingestor.py  settings.py  signals_collector.py
backend/notebooks/: README.md  polymarket_deep_insights.ipynb  polymarket_insights_exploration.ipynb  polymarket_ontology_analysis.ipynb
backend/scripts/: backfill_chainlink_series.py  build_curated_analysis_dataset.py  entrypoint.sh  export_core_tables_snapshot.py  export_notebook_report.sh  extract_market_datasets.py  generate_ontology_notebook.py  seed_chainlink_feeds.py  validate_dataset_manifest.py
(+166 files in other folders)
